--- a/styles/common/ModuleHeaderPC.css
+++ b/styles/common/ModuleHeaderPC.css
@@ -3,6 +3,8 @@ header.pc {
   width: 100%;
   -webkit-transition: margin 0.3s;
   transition: margin 0.3s;
+  background: #fff;
+  z-index: 999;
 }
 
 header.pc .up-line {
@@ -93,7 +95,7 @@ header.pc .main-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 60px;
+  height: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
   -webkit-box-align: center;
