--- a/styles/common/ModuleHeaderPC.scss
+++ b/styles/common/ModuleHeaderPC.scss
@@ -3,6 +3,8 @@ header.pc {
     position: fixed;
     width: 100%;
     transition: margin.3s;
+    background: #fff;
+    z-index: 999;
     .up-line {
         height: 32px;
         border-bottom: 1px solid #eee;
@@ -56,7 +58,7 @@ header.pc {
     .main-content {
         width: 100%;
         display: flex;
-        height: 60px;
+        height: 50px;
         padding-top: 10px;
         padding-bottom: 10px;
         align-items: center;
