--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -6,7 +6,7 @@ body {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  width: 100%;
+  width: calc(100% - 30px);
   padding-right: 15px;
   padding-left: 15px;
 }
