--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -6,14 +6,22 @@ body {
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  width: calc(100% - 30px);
-  padding-right: 15px;
-  padding-left: 15px;
+  width: calc(100% - 60px);
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 @media (min-width: 992px) {
   .container.with-padding {
     padding: 30px 30px 140px 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: calc(100% - 30px);
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
 
