--- a/styles/pages/page_index.css
+++ b/styles/pages/page_index.css
@@ -56,7 +56,7 @@
   background: white;
   font-size: 32px;
   display: table;
-  padding: 0 24px 0 16px;
+  padding: 6px 24px 0 16px;
   margin-top: 100px;
 }
 
