Add slide title line padding top

--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -49,7 +49,7 @@
         display: table;
         background-color: #0cbc64;
         color: #fff;
-        padding: 0 24px 0 16px;
+        padding: 16px 24px 0 16px;
         font-size: 84px;
     }
     a {
