--- a/styles/pages/page_index.css
+++ b/styles/pages/page_index.css
@@ -64,7 +64,7 @@
   display: table;
   background-color: #0cbc64;
   color: #fff;
-  padding: 0 24px 0 16px;
+  padding: 16px 24px 0 16px;
   font-size: 84px;
 }
 
