--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -66,3 +66,10 @@
         }
     }
 }
+
+.indexBlock {
+    margin-top: 100px;
+    @media(max-width: 768px) {
+        margin-top: 80px;
+    }
+}
