--- a/styles/common/ModuleProduct.scss
+++ b/styles/common/ModuleProduct.scss
@@ -1,4 +1,156 @@
 @import "vars.scss";
 .productItem {
     padding: 20px;
+    width: calc(100% - 42px);
+    border: 1px solid #eee;
+    .productItem-marks {
+        height: 22px;
+        display: flex;
+        align-items: center;
+        .mark__freeze {
+            width: 21px;
+            height: 32px;
+            background: url(/static/images/ui-icons/freeze.svg) no-repeat;
+            background-size: cover;
+        }
+        .mark__new {
+            padding-left: 12px;
+            padding-right: 12px;
+            border-radius: 50px;
+            background: #DCF0FF;
+            color: #2597EA;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            font-weight: bold;
+            font-size: 14px;
+            margin-right: 10px;
+        }
+        .mark__new::after {
+            content: "NEW";
+        }
+        .mark__hit {
+            background: #FFF4E2;
+            color: #FF9900;
+            padding-left: 12px;
+            padding-right: 12px;
+            border-radius: 50px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            font-weight: bold;
+            font-size: 14px;
+            margin-right: 10px;
+        }
+        .mark__hit::after {
+            content: "HIT";
+        }
+        .mark__sale {
+            background: #87C719;
+            color: #F0FFD7;
+            padding-left: 12px;
+            padding-right: 12px;
+            border-radius: 50px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            font-weight: bold;
+            font-size: 14px;
+            margin-right: 10px;
+        }
+        .mark__sale::after {
+            content: "АКЦИЯ";
+        }
+    }
+    .productItem-image {
+        margin-top: 10px;
+        height: 400px;
+        @media(max-width: 768px) {
+            height: 300px;
+        }
+        img {
+            width: 80%;
+            display: block;
+            margin: 0 auto;
+            transition: width.4s;
+        }
+    }
+    .productItem-id {
+        text-align: center;
+        font-size: 12px;
+        color: $grayText;
+    }
+    .productItem-title {
+        font-size: 24px;
+        text-align: center;
+        margin-top: 20px;
+        color: $blackText;
+        transition: color.2s;
+        font-weight: lighter;
+        line-height: 1.3;
+        &:hover {
+            color: $primaryGreenColor;
+        }
+        a {
+            color: currentColor;
+            text-decoration: none;
+        }
+    }
+    button {
+        border-radius: 50px;
+        padding: 10px;
+        padding-left: 16px;
+        border: none;
+        display: flex;
+        margin: 0 auto;
+        margin-top: 20px;
+        font-weight: 500;
+        font-size: 14px;
+        background: #fff;
+        color: $primaryGreenColor;
+        cursor: pointer;
+        align-items: center;
+        transition: background.2s, color.2s;
+        span.count {
+            width: 32px;
+            height: 32px;
+            display: flex;
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            background: #fff;
+            margin-left: 10px;
+            transition: background.2s;
+            &.active {
+                background: $primaryGreenColor;
+                color: white;
+            }
+        }
+        svg {
+            height: 16px;
+            fill: $primaryGreenColor;
+            transition: fill.2s;
+        }
+    }
+    &:hover {
+        .productItem-image {
+            img {
+                width: 90%;
+            }
+        }
+        button {
+            background: $primaryGreenColor;
+            color: white;
+            span.count {
+                background: $primaryGreenColor;
+                fill: white;
+            }
+            svg {
+                fill: white;
+            }
+            &:hover {
+                background: $primaryGreenColorDark;
+                span.count:not(.active) {
+                    background: $primaryGreenColorDark
+                }
+            }
+        }
+    }
 }
