--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -163,3 +163,49 @@
         }
     }
 }
+
+.indexBrands {
+    padding: 0;
+    list-style-type: none;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    @media(min-width: 360px) {
+        grid-template-columns: 1fr 1fr;
+    }
+    @media(min-width: 768px) {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 30px;
+    }
+    @media(min-width: 1150px) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    li {
+        min-height: 245px;
+        display: grid;
+        counter-increment: none;
+        padding: 0;
+        position: static;
+        a {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            padding: 20px 10px;
+            background-color: #F8F8F8;
+            position: relative;
+            text-decoration: none;
+            img {
+                max-width: 100%;
+            }
+            p {
+                color: #555;
+                margin-top: 20px;
+            }
+            @media(min-width: 415px) {
+                padding: 35px 20px;
+            }
+        }
+    }
+}
