--- a/styles/pages/page_index.css
+++ b/styles/pages/page_index.css
@@ -300,4 +300,77 @@
     padding: 35px 20px;
   }
 }
+
+.joinBlock .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #fbfbfb;
+}
+
+.joinBlock .head h1,
+.joinBlock .head p {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.joinBlock .head h1 {
+  text-transform: uppercase;
+  font-size: 32px;
+  margin-bottom: 0;
+}
+
+.joinBlock .head p {
+  max-width: 630px;
+  line-height: 1.5;
+  font-size: 16px;
+}
+
+.joinBlock .withbg {
+  background: url(/static/images/photos/reg.jpg) no-repeat #000;
+  height: 610px;
+  max-height: 610px;
+  background-size: cover;
+  background-position: center;
+  margin-top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.joinBlock .withbg button {
+  border: 8px solid #fff;
+  padding: 16px 56px;
+  color: #fff;
+  font-size: 64px;
+  cursor: pointer;
+  font-family: "Bebas Neue" !important;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+  margin-bottom: auto;
+  background: transparent;
+  font-weight: lighter;
+  margin: 0 auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-weight: 100 !important;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+
+.joinBlock .withbg button:hover {
+  opacity: .6;
+}
 /*# sourceMappingURL=page_index.css.map */
