--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -209,3 +209,60 @@
         }
     }
 }
+
+.joinBlock {
+    .head {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background: #fbfbfb;
+        h1,
+        p {
+            text-align: center;
+            justify-content: center;
+        }
+        h1 {
+            text-transform: uppercase;
+            font-size: 32px;
+            margin-bottom: 0;
+        }
+        p {
+            max-width: 630px;
+            line-height: 1.5;
+            font-size: 16px;
+        }
+    }
+    .withbg {
+        background: url(/static/images/photos/reg.jpg) no-repeat #000;
+        height: 610px;
+        max-height: 610px;
+        background-size: cover;
+        background-position: center;
+        margin-top: 0;
+        display: flex;
+        button {
+            border: 8px solid #fff;
+            padding: 16px 56px;
+            color: #fff;
+            font-size: 64px;
+            cursor: pointer;
+            font-family: "Bebas Neue" !important;
+            text-transform: uppercase;
+            text-align: center;
+            display: block;
+            margin-bottom: auto;
+            background: transparent;
+            font-weight: lighter;
+            margin: 0 auto;
+            margin-top: auto;
+            margin-bottom: auto;
+            font-weight: 100 !important;
+            transition: opacity.4s;
+            &:hover {
+                opacity: .6;
+            }
+        }
+    }
+}
