--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -57,4 +57,17 @@ h1 {
     font-size: 24px;
   }
 }
+
+@media (max-width: 768px) {
+  header.pc,
+  footer.pc {
+    display: none;
+  }
+  header.mobile,
+  footer.mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 /*# sourceMappingURL=uikit.css.map */
