--- a/styles/common/uikit.scss
+++ b/styles/common/uikit.scss
@@ -45,3 +45,14 @@ h1 {
         font-size: 24px;
     }
 }
+
+@media(max-width: 768px) {
+    header.pc,
+    footer.pc {
+        display: none;
+    }
+    header.mobile,
+    footer.mobile {
+        display: flex;
+    }
+}
