--- a/styles/pages/page_index.css
+++ b/styles/pages/page_index.css
@@ -27,6 +27,7 @@
 
 .main-slider .swiper-wrapper .swiper-slide .container.right > * {
   margin-left: auto;
+  text-align: right;
 }
 
 .main-slider .main-slider_pagination {
@@ -66,6 +67,12 @@
   color: #fff;
   padding: 16px 24px 0 16px;
   font-size: 84px;
+}
+
+@media (max-width: 768px) {
+  .main-slider .slide_title_line {
+    font-size: 54px;
+  }
 }
 
 .main-slider a {
@@ -331,6 +338,13 @@
   margin-bottom: 0;
 }
 
+@media (max-width: 768px) {
+  .joinBlock .head h1 {
+    font-size: 22px;
+    line-height: 1.5;
+  }
+}
+
 .joinBlock .head p {
   max-width: 630px;
   line-height: 1.5;
@@ -372,5 +386,13 @@
 
 .joinBlock .withbg button:hover {
   opacity: .6;
+}
+
+@media (max-width: 768px) {
+  .joinBlock .withbg button {
+    font-size: 32px;
+    border: 4px solid #fff;
+    padding-bottom: 11px;
+  }
 }
 /*# sourceMappingURL=page_index.css.map */
