--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -17,6 +17,7 @@
                 &.right {
                     >* {
                         margin-left: auto;
+                        text-align: right;
                     }
                 }
             }
@@ -51,6 +52,9 @@
         color: #fff;
         padding: 16px 24px 0 16px;
         font-size: 84px;
+        @media(max-width: 768px) {
+            font-size: 54px;
+        }
     }
     a {
         margin-top: 64px;
@@ -227,6 +231,10 @@
             text-transform: uppercase;
             font-size: 32px;
             margin-bottom: 0;
+            @media(max-width: 768px) {
+                font-size: 22px;
+                line-height: 1.5;
+            }
         }
         p {
             max-width: 630px;
@@ -262,6 +270,11 @@
             transition: opacity.4s;
             &:hover {
                 opacity: .6;
+            }
+            @media(max-width: 768px) {
+                font-size: 32px;
+                border: 4px solid #fff;
+                padding-bottom: 11px;
             }
         }
     }
