--- a/styles/common/ModuleFooterMob.scss
+++ b/styles/common/ModuleFooterMob.scss
@@ -1,1 +1,71 @@
 @import "vars.scss";
+footer.mobile {
+    padding-top: 20px;
+    .container>ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        >li {
+            list-style: none;
+            line-height: 32px;
+            font-weight: 500;
+            color: $grayText;
+            position: relative;
+            &::after {
+                content: "+";
+                right: 0;
+                position: absolute;
+                top: 0;
+            }
+            &::before {
+                content: "-";
+                margin-left: auto;
+                position: absolute;
+                right: 0;
+                display: none;
+                top: 0;
+            }
+        }
+    }
+    .footerSocial {
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+        .logo {
+            width: 55%;
+            img {
+                width: 100%;
+            }
+        }
+        .social {
+            display: flex;
+            justify-content: space-between;
+            width: 40%;
+            margin-left: auto;
+            svg {
+                width: 28px;
+                height: 28px;
+                fill: $blackText;
+                transition: fill.2s;
+                &:hover {
+                    fill: $primaryGreenColor;
+                }
+            }
+        }
+    }
+    .footerFooter {
+        padding-top: 10px;
+        margin-top: 15px;
+        border-top: 1px solid #eee;
+        p {
+            font-size: 12px;
+            color: $grayText;
+            margin-bottom: 10px;
+            line-height: 1.4;
+            a {
+                text-decoration: none;
+                color: $primaryGreenColor;
+            }
+        }
+    }
+}
