--- a/styles/common/uikit.scss
+++ b/styles/common/uikit.scss
@@ -46,6 +46,11 @@ h1 {
     }
 }
 
+header.mobile,
+footer.mobile {
+    display: none;
+}
+
 @media(max-width: 890px) {
     header.pc,
     footer.pc {
