--- a/styles/common/ModuleHeaderPC.scss
+++ b/styles/common/ModuleHeaderPC.scss
@@ -156,6 +156,9 @@ header.pc {
                         }
                     }
                 }
+                ul {
+                    display: none;
+                }
             }
             li {
                 list-style: none;
