--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -1,4 +1,8 @@
 @import url(/static/fonts/getfonts.css);
+* {
+  outline: none;
+}
+
 body {
   margin: 0 auto;
 }
@@ -61,6 +65,42 @@ h1 {
 header.mobile,
 footer.mobile {
   display: none !important;
+}
+
+.popup-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 99999;
+  -webkit-transform: translateX(200%);
+          transform: translateX(200%);
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.popup-wrapper.active {
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+}
+
+.popup-wrapper .closePopup {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 20px;
+  top: 20px;
+  opacity: .4;
+  cursor: pointer;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+  z-index: 99999999999;
+}
+
+.popup-wrapper .closePopup:hover {
+  opacity: .7;
 }
 
 @media (max-width: 890px) {
