--- a/styles/common/PopupJoin.scss
+++ b/styles/common/PopupJoin.scss
@@ -8,6 +8,7 @@
     height: 100%;
     background: #f8f8f8;
     color: $blackText;
+    overflow-y: auto;
     h1 {
         display: block;
     }
