--- a/styles/common/ModuleCartLine.css
+++ b/styles/common/ModuleCartLine.css
@@ -3,6 +3,29 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+@media (max-width: 650px) {
+  .cart-line {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #eee;
+  }
+}
+
+.cart-line .delete {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  opacity: .7;
 }
 
 .cart-line .image {
@@ -10,8 +33,120 @@
   height: 80px;
 }
 
+@media (max-width: 650px) {
+  .cart-line .image {
+    width: 140px;
+    height: 180px;
+  }
+}
+
 .cart-line .image img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.cart-line .center-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 10px;
+}
+
+@media (max-width: 650px) {
+  .cart-line .center-line {
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    line-height: 1.3;
+  }
+}
+
+.cart-line .count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 30px;
+  margin-top: 10px;
+}
+
+@media (max-width: 650px) {
+  .cart-line .count {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    height: unset;
+  }
+}
+
+@media (min-width: 650px) {
+  .cart-line .count p {
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+}
+
+.cart-line .count .edit-count {
+  margin-left: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 30px;
+  border: 1px solid #dadada;
+}
+
+.cart-line .count .edit-count > * {
+  width: 30px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+.cart-line .count .edit-count input {
+  width: 40px;
+  border: none;
+  border-left: 1px solid #dadada;
+  border-right: 1px solid #dadada;
+  cursor: text;
+  -moz-appearance: textfield;
+}
+
+.cart-line .count .edit-count input::-webkit-outer-spin-button, .cart-line .count .edit-count input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.cart-line .total-price {
+  font-weight: bold;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #323232;
 }
 /*# sourceMappingURL=ModuleCartLine.css.map */
