--- a/styles/common/ModuleCartLine.scss
+++ b/styles/common/ModuleCartLine.scss
@@ -2,12 +2,96 @@
 .cart-line {
     display: flex;
     width: 100%;
+    align-items: center;
+    position: relative;
+    @media(max-width: 650px) {
+        flex-direction: column;
+        margin-bottom: 30px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #eee;
+    }
+    .delete {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        opacity: .7;
+    }
     .image {
         width: 80px;
         height: 80px;
+        @media(max-width: 650px) {
+            width: 140px;
+            height: 180px;
+        }
         img {
             max-width: 100%;
             max-height: 100%;
         }
+    }
+    .center-line {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: 10px;
+        @media(max-width: 650px) {
+            text-align: center;
+            align-items: center;
+            line-height: 1.3;
+        }
+    }
+    .count {
+        display: flex;
+        align-items: center;
+        height: 30px;
+        margin-top: 10px;
+        @media(max-width: 650px) {
+            flex-direction: column;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            border-top: 1px solid #eee;
+            border-bottom: 1px solid #eee;
+            height: unset;
+        }
+        p {
+            @media(min-width: 650px) {
+                margin-bottom: 0;
+                margin-top: 0;
+            }
+        }
+        .edit-count {
+            margin-left: 15px;
+            display: flex;
+            justify-content: center;
+            height: 30px;
+            border: 1px solid #dadada;
+            >* {
+                width: 30px;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+            }
+            input {
+                width: 40px;
+                border: none;
+                border-left: 1px solid #dadada;
+                border-right: 1px solid #dadada;
+                cursor: text;
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                }
+                -moz-appearance: textfield;
+            }
+        }
+    }
+    .total-price {
+        font-weight: bold;
+        margin-left: 20px;
+        font-size: 16px;
+        color: $blackText;
     }
 }
