--- a/styles/common/ModuleCartLine.css
+++ b/styles/common/ModuleCartLine.css
@@ -7,6 +7,7 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 650px) {
@@ -31,6 +32,7 @@
 .cart-line .image {
   width: 80px;
   height: 80px;
+  border: 1px solid #eee;
 }
 
 @media (max-width: 650px) {
@@ -66,6 +68,7 @@
         -ms-flex-align: center;
             align-items: center;
     line-height: 1.3;
+    margin-top: 25px;
   }
 }
 
@@ -115,6 +118,12 @@
   border: 1px solid #dadada;
 }
 
+@media (max-width: 650px) {
+  .cart-line .count .edit-count {
+    margin-left: 0;
+  }
+}
+
 .cart-line .count .edit-count > * {
   width: 30px;
   text-align: center;
@@ -143,9 +152,15 @@
   -webkit-appearance: none;
 }
 
+@media (max-width: 650px) {
+  .cart-line .count p {
+    margin-left: 0px !important;
+  }
+}
+
 .cart-line .total-price {
   font-weight: bold;
-  margin-left: 20px;
+  margin-left: 0px;
   font-size: 16px;
   color: #323232;
 }
