--- a/styles/common/ModuleCartLine.scss
+++ b/styles/common/ModuleCartLine.scss
@@ -4,6 +4,7 @@
     width: 100%;
     align-items: center;
     position: relative;
+    margin-bottom: 20px;
     @media(max-width: 650px) {
         flex-direction: column;
         margin-bottom: 30px;
@@ -19,6 +20,7 @@
     .image {
         width: 80px;
         height: 80px;
+        border: 1px solid #eee;
         @media(max-width: 650px) {
             width: 140px;
             height: 180px;
@@ -37,6 +39,7 @@
             text-align: center;
             align-items: center;
             line-height: 1.3;
+            margin-top: 25px;
         }
     }
     .count {
@@ -66,6 +69,9 @@
             justify-content: center;
             height: 30px;
             border: 1px solid #dadada;
+            @media(max-width: 650px) {
+                margin-left: 0;
+            }
             >* {
                 width: 30px;
                 text-align: center;
@@ -87,10 +93,15 @@
                 -moz-appearance: textfield;
             }
         }
+        @media(max-width: 650px) {
+            p {
+                margin-left: 0px !important;
+            }
+        }
     }
     .total-price {
         font-weight: bold;
-        margin-left: 20px;
+        margin-left: 0px;
         font-size: 16px;
         color: $blackText;
     }
