--- a/styles/common/PopupCart.scss
+++ b/styles/common/PopupCart.scss
@@ -11,6 +11,8 @@
     height: 100%;
     @media(max-width: 650px) {
         padding: 40px 20px;
+        max-height: 100%;
+        overflow-y: auto;
     }
     h1 {
         font-weight: bold;
@@ -20,5 +22,65 @@
         background: #fff;
         border-radius: 15px;
         padding: 10px;
+        height: calc(100% - 400px);
+        overflow-y: auto;
+    }
+    .cart_footer {
+        position: absolute;
+        bottom: 85px;
+        width: calc(100% - 100px);
+        @media(max-width: 768px) {
+            width: auto;
+            position: relative;
+            margin-top: 120px;
+        }
+        h1 {
+            font-size: 24px;
+            text-transform: uppercase;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #444;
+        }
+        p {
+            span {
+                font-weight: bold;
+            }
+        }
+        .control {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            @media(max-width: 768px) {
+                flex-direction: column;
+            }
+            button {
+                width: 47%;
+                @media(max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 10px;
+                }
+                height: 50px;
+                border: none;
+                border-radius: 50px;
+                margin-top: 15px;
+                font-size: 18px;
+                font-weight: 500;
+                cursor: pointer;
+                color: white;
+                transition: background.2s;
+                &.tocart {
+                    background: $primaryGreenColor;
+                    &:hover {
+                        background: $primaryGreenColorDark;
+                    }
+                }
+                &.clear {
+                    background: #B4B4B4;
+                    color: white;
+                    &:hover {
+                        background: #929292;
+                    }
+                }
+            }
+        }
     }
 }
