--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -34,7 +34,7 @@ body {
 }
 
 .font-roboto {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .font-gotham {
