--- a/styles/common/ModuleProduct.scss
+++ b/styles/common/ModuleProduct.scss
@@ -3,6 +3,7 @@
     padding: 20px;
     width: calc(100% - 42px);
     border: 1px solid #eee;
+    max-width: 30%;
     .productItem-marks {
         height: 22px;
         display: flex;
