--- a/styles/common/uikit.scss
+++ b/styles/common/uikit.scss
@@ -1,4 +1,5 @@
 @import url(/static/fonts/getfonts.css);
+@import "vars.scss";
 * {
     outline: none;
 }
@@ -63,6 +64,10 @@ footer.mobile {
     z-index: 99999;
     transform: translateX(200%);
     transition: transform.5s;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
     &.active {
         transform: translateX(0px);
     }
@@ -78,6 +83,31 @@ footer.mobile {
         z-index: 99999999999;
         &:hover {
             opacity: .7;
+        }
+    }
+}
+
+.breadcrumb {
+    a {
+        color: $grayText;
+        font-size: 12px;
+        text-decoration: none;
+        transition: color.2s;
+        margin-right: 21px;
+        position: relative;
+        white-space: nowrap;
+        &:hover {
+            color: black;
+        }
+        &::after {
+            content: "—";
+            position: absolute;
+            right: -16px;
+            color: #B4B4B4;
+            top: -1px;
+        }
+        &:last-child::after {
+            content: "";
         }
     }
 }
