--- a/styles/pages/page_category.scss
+++ b/styles/pages/page_category.scss
@@ -20,4 +20,7 @@ h1.title {
         padding-bottom: 10px;
         margin-bottom: 30px;
     }
+    .productItem {
+        max-width: 30%;
+    }
 }
