Small fix category page

--- a/styles/pages/page_category.css
+++ b/styles/pages/page_category.css
@@ -26,5 +26,29 @@ h1.title span {
 
 .catalog-block .productItem {
   max-width: 30%;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 1024px) {
+  .catalog-block .productItem {
+    max-width: 40%;
+  }
+}
+
+@media (max-width: 425px) {
+  .catalog-block .productItem {
+    max-width: 100%;
+  }
+}
+
+.catalog-block .catalog-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=page_category.css.map */
