--- a/styles/pages/page_category.scss
+++ b/styles/pages/page_category.scss
@@ -22,5 +22,17 @@ h1.title {
     }
     .productItem {
         max-width: 30%;
+        margin-bottom: 30px;
+        @media(max-width: 1024px) {
+            max-width: 40%;
+        }
+        @media(max-width: 425px) {
+            max-width: 100%;
+        }
+    }
+    .catalog-list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 }
