--- a/styles/common/ModuleCartLine.css
+++ b/styles/common/ModuleCartLine.css
@@ -2,24 +2,17 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: calc(100% - 10px);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   position: relative;
   margin-bottom: 20px;
-}
-
-@media (max-width: 650px) {
-  .cart-line {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-bottom: 30px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #eee;
-  }
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 1px solid lightgray;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .cart-line .delete {
@@ -32,19 +25,22 @@
 .cart-line .image {
   width: 80px;
   height: 80px;
-  border: 1px solid #eee;
-}
-
-@media (max-width: 650px) {
-  .cart-line .image {
-    width: 140px;
-    height: 180px;
-  }
 }
 
 .cart-line .image img {
   max-width: 100%;
   max-height: 100%;
+}
+
+.cart-line .price_p {
+  margin-left: 20px;
+  font-size: 14px;
+}
+
+@media (max-width: 650px) {
+  .cart-line .price_p {
+    display: none;
+  }
 }
 
 .cart-line .center-line {
@@ -61,17 +57,6 @@
   margin-left: 10px;
 }
 
-@media (max-width: 650px) {
-  .cart-line .center-line {
-    text-align: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    line-height: 1.3;
-    margin-top: 25px;
-  }
-}
-
 .cart-line .count {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -81,22 +66,6 @@
           align-items: center;
   height: 30px;
   margin-top: 10px;
-}
-
-@media (max-width: 650px) {
-  .cart-line .count {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
-    height: unset;
-  }
 }
 
 @media (min-width: 650px) {
@@ -116,12 +85,6 @@
           justify-content: center;
   height: 30px;
   border: 1px solid #dadada;
-}
-
-@media (max-width: 650px) {
-  .cart-line .count .edit-count {
-    margin-left: 0;
-  }
 }
 
 .cart-line .count .edit-count > * {
@@ -163,5 +126,11 @@
   margin-left: 0px;
   font-size: 16px;
   color: #323232;
+}
+
+@media (max-width: 650px) {
+  .cart-line .total-price {
+    display: none;
+  }
 }
 /*# sourceMappingURL=ModuleCartLine.css.map */
