--- a/styles/common/ModuleCartLine.scss
+++ b/styles/common/ModuleCartLine.scss
@@ -1,16 +1,15 @@
 @import "vars.scss";
 .cart-line {
     display: flex;
-    width: 100%;
+    width: calc(100% - 10px);
     align-items: center;
     position: relative;
     margin-bottom: 20px;
-    @media(max-width: 650px) {
-        flex-direction: column;
-        margin-bottom: 30px;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #eee;
-    }
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 1px solid rgb(211, 211, 211);
+    padding-left: 5px;
+    padding-right: 5px;
     .delete {
         position: absolute;
         right: 5px;
@@ -20,14 +19,16 @@
     .image {
         width: 80px;
         height: 80px;
-        border: 1px solid #eee;
-        @media(max-width: 650px) {
-            width: 140px;
-            height: 180px;
-        }
         img {
             max-width: 100%;
             max-height: 100%;
+        }
+    }
+    .price_p {
+        margin-left: 20px;
+        font-size: 14px;
+        @media(max-width: 650px) {
+            display: none;
         }
     }
     .center-line {
@@ -35,28 +36,12 @@
         flex-direction: column;
         justify-content: center;
         margin-left: 10px;
-        @media(max-width: 650px) {
-            text-align: center;
-            align-items: center;
-            line-height: 1.3;
-            margin-top: 25px;
-        }
     }
     .count {
         display: flex;
         align-items: center;
         height: 30px;
         margin-top: 10px;
-        @media(max-width: 650px) {
-            flex-direction: column;
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            border-top: 1px solid #eee;
-            border-bottom: 1px solid #eee;
-            height: unset;
-        }
         p {
             @media(min-width: 650px) {
                 margin-bottom: 0;
@@ -69,9 +54,6 @@
             justify-content: center;
             height: 30px;
             border: 1px solid #dadada;
-            @media(max-width: 650px) {
-                margin-left: 0;
-            }
             >* {
                 width: 30px;
                 text-align: center;
@@ -104,5 +86,8 @@
         margin-left: 0px;
         font-size: 16px;
         color: $blackText;
+        @media(max-width: 650px) {
+            display: none;
+        }
     }
 }
