--- a/styles/common/PopupCart.scss
+++ b/styles/common/PopupCart.scss
@@ -13,6 +13,8 @@
         padding: 40px 20px;
         max-height: 100%;
         overflow-y: auto;
+        max-width: calc(100% - 40px);
+        width: 100%;
     }
     h1 {
         font-weight: bold;
