--- a/styles/common/PopupCookies.css
+++ b/styles/common/PopupCookies.css
@@ -25,10 +25,25 @@
           transform: translateY(-10%) translateX(-5%);
 }
 
+@media (max-width: 588px) {
+  .popup__cookies.visible {
+    -webkit-transform: translateY(0%) translateX(0%);
+            transform: translateY(0%) translateX(0%);
+    max-width: calc(100% - 48px);
+  }
+}
+
 .popup__cookies .title {
   font-weight: 500;
   font-size: 24px;
   line-height: 34px;
+}
+
+@media (max-width: 588px) {
+  .popup__cookies .title {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
 
 .popup__cookies p {
@@ -38,6 +53,13 @@
   display: block;
   padding: 5px 0;
   font-weight: 400;
+}
+
+@media (max-width: 588px) {
+  .popup__cookies p {
+    margin-top: 5px;
+    font-size: 15px;
+  }
 }
 
 .popup__cookies .row_line {
